Phada UI system + Markdown notebook view