@@ -45,6 +45,39 @@ Full Preview: A "Reading Mode" to see the final document.
 Summary of what works now:
 Save As: You can now save your work anywhere on your PC.
 Image Insertion: You can pull photos directly from your hard drive into the document.
-Tables: One click inserts a professional Markdown table template.
+Tables: You can insert a custom-sized markdown table (Insert → Insert Table...).
 Shortcuts: Ctrl+S saves, Ctrl+B bolds, Ctrl+N new file—it feels like a real desktop app.
 Layout Toggling: You can hide the preview if you want to focus only on writing.
+
+New Features (Added):
+- Export as PDF: File → Export → Export as PDF. This attempts an HTML→PDF conversion using OpenHTMLToPDF (recommended), or falls back to the system print dialog.
+- HTML → PDF: File → Export → HTML → PDF... (select an HTML file to convert to PDF using OpenHTMLToPDF).
+- Recent Files & Login: File → Recent Files shows up to 10 recent files. Log in (File → Login...) to keep a user-specific recent-file history (stored in your home folder as `.seproj_recent_<username>.txt`).
+
+Dependencies (for HTML → PDF):
+To enable the best HTML→PDF conversion you should add OpenHTMLToPDF libraries to the classpath when running or building the application:
+- com.openhtmltopdf:openhtmltopdf-core:1.0.10
+- com.openhtmltopdf:openhtmltopdf-pdfbox:1.0.10
+
+If you use Maven, add these to your `pom.xml`. If you don't use a build system, place the JARs on the classpath when running the app.
+
+No-Maven: PowerShell downloader (Windows)
+- A helper script `fetch_openhtmltopdf.ps1` is included. Run it from the project root to download required JARs into a `lib\` folder.
+
+Example:
+```
+# run the downloader
+.\fetch_openhtmltopdf.ps1
+# compile with the downloaded jars
+javac -cp "lib/*" --module-path "C:\path\to\javafx-sdk\lib" --add-modules javafx.controls,javafx.web -d out *.java
+# run the app
+java --module-path "C:\path\to\javafx-sdk\lib" --add-modules javafx.controls,javafx.web -cp "out;lib/*" MainApp
+```
+
+Notes & Tips:
+- Recent file lists are saved per username in your system home folder.
+- If OpenHTMLToPDF is not available, the app will prompt you to add it and will show options instead of automatically using the system default printer (this avoids automatically using an expired Adobe printer). You can either:
+  - Run `fetch_openhtmltopdf.ps1` to download the required jars into `./lib/` and re-run the app, or
+  - Choose another installed printer (File → Export → Export as PDF → Choose Printer...).
+
+Tip: If your system default PDF printer is Adobe and it is expired, use the "Choose Printer..." option and pick a different printer (e.g., Microsoft Print to PDF) or use the HTML→PDF route which writes a PDF file directly using OpenHTMLToPDF.
